# chainable-operators

./: LICENSE  Main.hs  README.md  VarArgs.hs  chainable-operators.cabal  chained-operators.cabal
.stack-work/install/68c2458c/flag-cache/: chained-operators-0.1.0.0-GkBvuZfGoz5312Kp8mtkpo
.stack-work/install/68c2458c/lib/x86_64-windows-ghc-8.0.1/chained-operators-0.1.0.0-GkBvuZfGoz5312Kp8mtkpo/: VaryingArgs.hi
app/: Main.hs
src/: Chainable.hs
