name:                chainable-operators
version:             0.1.0.0
synopsis:            Introduces chainable operators to Haskell
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/chainable-operators#readme
license:             BSD3
license-file:        LICENSE.md
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan Sundqvist, 2016-2017
category:            <category>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chainable

  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite chainable-operators-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chainable-operators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/chainable-operators
